--- a/content/projects/project_1.rmd
+++ b/content/projects/project_1.rmd
@@ -5,10 +5,12 @@ categories:
 date: "2017-10-31T21:28:43-05:00"
 description: ""
 draft: false
-image: pic10.jpg
+image: pic21.jpg
 keywords: ""
-slug: test
+slug: project_1
 title: test
 ---
 
-Harley, David...
+Title
+
+Project 1
