--- a/content/projects/project_1.Rmd
+++ b/content/projects/project_1.Rmd
@@ -3,13 +3,13 @@ categories:
 - ""    #the front matter should be like the one found in, e.g., blog2.md. It cannot be like the normal Rmd we used
 - ""
 date: "2021-09-30"
-description: Project_1 # the title that will show up once someone gets to this page
+description: Scatterplot of election polls # the title that will show up once someone gets to this page
 draft: false
-image: pic.21 # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
+image: pic07.jpg # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
 
 keywords: ""
 slug: project_1 # slug is the shorthand URL address... no spaces plz
-title: Project_1
+title: Scatterplot of election polls
 ---
 
 
@@ -52,16 +52,13 @@ library(rvest) # to scrape wikipedia page
 
 
 
-# Challenge 2: Opinion polls for the 2021 German elections
+# Opinion polls for the 2021 German elections
 
-The Guardian newspaper has an [election poll tracker for the upcoming German election](https://www.theguardian.com/world/2021/aug/20/german-election-poll-tracker-who-will-be-the-next-chancellor). The list of the opinion polls since Jan 2021 can be found at [Wikipedia](https://en.wikipedia.org/wiki/Opinion_polling_for_the_2021_German_federal_election) and we will reproduce a graph similar to the one produced by the Guardian using the data from the wikipedia page . 
+The goal is to create a chart that synthesizes the opinion polls for the 2021 German election, such as the one [the one](https://www.theguardian.com/world/2021/aug/20/german-election-poll-tracker-who-will-be-the-next-chancellor) created by the Guardian newspaper.
 
+**Step 1: Scraping the data from the Wikipedia page**
 
-
-
-**Scraping Wikipedia page**
-
-First, we scrape the wikipedia page and import the table in a dataframe.
+We scrape the wikipedia page and import the table in a dataframe.
 
 
 ```{r scrape_wikipedia_polling_data, warnings= FALSE, message=FALSE, cache=TRUE}
@@ -102,9 +99,9 @@ german_election_polls <- polls[[1]] %>% # the first table on the page contains t
          )
 ```
 
-**Building Chart**
+**Step 2: Building the Chart**
 
-Then we reproduce the chart with the new data.
+Then, we create the chart with the data scrapped from Wikipedia.
 
 ```{r making_challenge_2_plot, warnings= FALSE, message=FALSE, cache=TRUE}
 library(plotly)
@@ -136,3 +133,7 @@ theme(axis.title.x = element_text(size = 12, angle = 0)) +
 theme(axis.title.y = element_text(size = 12, angle = 90)) +
   NULL
 ```
+
+**Final output**
+
+We obtained the synthesis of opinion polls for the 2021 German election. As the polls predicted, Olaf Scholz' SPD and Armin Laschet's CDU were very close, and the SPD won by a small margin.
