--- a/content/blogs/about_me.Rmd
+++ b/content/blogs/about_me.Rmd
@@ -68,6 +68,6 @@ I like music, especially funk, soul, and jazz. I also do a lot of sport and like
 
 **My resume**
 
-```{r resume, out.width="100%", cache=TRUE}
+```{r resume, out.width="100%", cache=TRUE, echo=FALSE}
 knitr::include_graphics("/img/HadrienPistre_resume.jpg",error =FALSE)
 ```
