--- a/content/blogs/blog3.rmd
+++ b/content/blogs/blog3.rmd
@@ -13,4 +13,4 @@ title: The Guardian - Article
 
 **The Guardian - Steel will be vital to the green revolution, but our industry needs help to change**
 
-An interesting article from [The Guardian about the future of the UK steel industry in a sustainable future](https://www.theguardian.com/commentisfree/2021/oct/20/steel-green-revolution-industry-government-investment-technology-jobs-turbines-electric-cars) (for French audience).
+An interesting article from [The Guardian about the future of the UK steel industry in a sustainable future](https://www.theguardian.com/commentisfree/2021/oct/20/steel-green-revolution-industry-government-investment-technology-jobs-turbines-electric-cars).
