--- a/content/blogs/project_1.Rmd
+++ b/content/blogs/project_1.Rmd
@@ -3,7 +3,7 @@ categories:
 - ""    #the front matter should be like the one found in, e.g., blog2.md. It cannot be like the normal Rmd we used
 - ""
 date: "2021-09-30"
-description: Yield curve inversion # the title that will show up once someone gets to this page
+description: Study of the yield curves for US treasuries since 1960 # the title that will show up once someone gets to this page
 draft: false
 image: pic_project_1.jpg # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
 
