--- a/content/blogs/project_3.Rmd
+++ b/content/blogs/project_3.Rmd
@@ -3,7 +3,7 @@ categories:
 - ""    #the front matter should be like the one found in, e.g., blog2.md. It cannot be like the normal Rmd we used
 - ""
 date: "2021-09-30"
-description: Scatterplot of election polls # the title that will show up once someone gets to this page
+description: Synthesis of election polls for the 2021 German election # the title that will show up once someone gets to this page
 draft: false
 image: pic_project_3.jpg # save picture in \static\img\blogs. Acceptable formats= jpg, jpeg, or png . Your iPhone pics wont work
 
