--- a/content/blogs/blog2.rmd
+++ b/content/blogs/blog2.rmd
@@ -11,6 +11,6 @@ slug: le_fig
 title: Le Figaro - Article
 ---
 
-# Le Figaro - Emmanuel Macron lance un vaste plan de reconquête industrielle
+**Le Figaro - Emmanuel Macron lance un vaste plan de reconquête industrielle**
 
 An interesting article from [Le Figaro about the France 2030 plan](https://www.lefigaro.fr/conjoncture/emmanuel-macron-lance-un-vaste-plan-de-reconquete-industrielle-20211012) (for French-speaking audience).
